# tasker-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  create_new_tag.yml  publish.yml  release.yml  rust.yml  test.yml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/tasks/: application.rs  mod.rs
