[package]
name = "tasker-cli"
version = "0.1.0"
edition = "2021"
authors = ["Dalia Rojas Vallejo <daliarojasvallejo@gmail.com>"]
description = "A To-Do CLI application."
readme = true
repository = "https://github.com/DavoReds/tasker-cli"
license = "GPL-3.0-or-later"
keywords = ["todo", "app", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
confy = { version = "0.5.1", default-features = false, features = ["yaml_conf"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
