[package]
name = "tasker-cli"
version = "0.2.2"
edition = "2021"
authors = ["Dalia Rojas Vallejo <daliarojasvallejo@proton.me>"]
description = "A To-Do CLI application for managing your daily tasks"
readme = true
repository = "https://github.com/DavoReds/tasker-cli"
license = "GPL-3.0-or-later"
keywords = ["todo", "app", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
confy = { version = "0.5.1", default-features = false, features = ["yaml_conf"] }
dirs = "5.0.1"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
